# 3d-game

./: .gitignore  CMakeLists.txt  README.md  cmake_configuration.src.hpp
cmake/: FindGLFW.cmake
include/: CMakeLists.txt
include/3d-game-engine/: CMakeLists.txt  Engine.hpp  Shader.hpp  Window.hpp
src/: CMakeLists.txt
src/3d-game/: 3d-game.cpp  CMakeLists.txt
src/3d-game-engine/: CMakeLists.txt  Engine.cpp  OpenGLDebug.cpp  OpenGLDebug.hpp  Window.cpp
